--- a/sections/about.html
+++ b/sections/about.html
@@ -15,20 +15,18 @@
       <main class="about-sections">
         <section class="about-section play-along">
           <h2>Rigenera Digitale</h2>
-            <p>Sistema operativo basato su Linux <strong>Ubuntu 18.04 LTS</strong> e personalizzato da Open Genova</p>
-<pre><code class="language-bash">$ git clone https://github.com/electron/electron-quick-start
-$ cd electron-quick-start
-$ npm install &amp;&amp; npm start
-</code></pre>
+            <p>Basato su <a href="https://www.ubuntu.com/desktop/features" aria-label="Open Genova">Ubuntu 18.04 LTS</a> e personalizzato da <a href="https://associazione.opengenova.org" aria-label="Open Genova">Open Genova</a>  </p>
+              <p><center><img src="assets/img/ubuntu.png" alt="Ubuntu"></center></p>
         </section>
         <section class="about-section about-code">
           <h2>La Guida di Open Genova</h2>
-            <p>Avviando questa guida troverai una panoramica delle principali funzionalità del sistema operativo per la navigazione su Internet, la lettura della posta elettronica e per altre operazioni da ufficio. Le applicazioni prese in esame potranno essere avviate da questa Guida. <strong>Info: rigenera@opengenova.org</strong></p>
-
+            <p>Avviando questa guida troverai una panoramica delle principali funzionalità del sistema operativo per la navigazione su Internet,
+              la lettura della posta elettronica e per altre operazioni da ufficio.
+              <code>Formazione e approfondimenti</code> su <a href="https://academy.opengenova.org" aria-label="academy">Academy di Open Genova</a></p>
         </section>
         <footer class="about-section footer">
           <div class="rainbow-button-wrapper">
-            <button id="get-started" class="about-button modal-hide">Avvia la Guida</button>
+            <button id="get-started" class="about-button modal-hide">Vai alla guida</button>
           </div>
         </footer>
       </main>
