--- a/sections/windows/windows.html
+++ b/sections/windows/windows.html
@@ -8,21 +8,21 @@
         </h1>
         <h3>La sezione <code>Primi Passi</code> ha l'obiettivo di indirizzare l'utente che è al primo utilizzo del sistema ad usare subito gli strumenti a disposizione.</h3>
 
-        <p>Ogni paragrafo sottostante può essere aperto facendo click con il pulsante del mouse. Si aprirà una sezione descrittiva della funzionalità in oggetto.
+        <p>Fai click sul titolo per aprire la guida relativa.</p>
 
       </div>
     </header>
 
     <div class="demo">
       <div class="demo-wrapper">
-        <button id="new-window-demo-toggle" class="js-container-target demo-toggle-button">Menu applicazioni
+        <button id="new-window-demo-toggle" class="js-container-target demo-toggle-button">Menu Principale
           <div class="demo-meta u-avoid-clicks">Apri questo menu per vedere la guida</div>
         </button>
         <div class="demo-box">
 
-          <p>Il <code>Menu Applicazioni</code> è una funzionalità base del sistema ed è simile a quella di altri sistemi operativi.
+          <p>Il <code>Menu Principale</code> è una funzionalità base del sistema ed è simile a quella di altri sistemi operativi.
           <p>In basso a destra si trova il Menu principale da cui è possibile accede a tutti i principali strumenti e applicazioni del sistema.</p>
-          <p><img src="assets/img/applicazioni.png" alt="Menu Applicazione"></p>
+          <p><img src="assets/img/menu.png" alt="Menu Applicazione"></p>
           <p>Clicca sull'icona per aprile l'applicazione.</p>
           </div>
         </div>
@@ -36,7 +36,7 @@
         </button>
         <div class="demo-box">
            <p>Linux ha diverse cartelle, molte sono usate dal sistema. Quelle che interessano all'utente si trovano nella cartella Home (Documenti, Scaricati, Immagini, ecc.)</p>
-           <p><img src="assets/img/applicazioni.png" alt="Menu Applicazione"></p>
+           <p><img src="assets/img/Cartelle.png" alt="Menu Applicazione"></p>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
             L'utente può installare nuovo software usando il programma per la gestione di Applicazioni divise per categoria.
             Basterà selezionare ciò che interessa, con una connessione internet attiva, per aggiungere.</p>
           </p>
-          <p><img src="assets/img/applicazioni.png" alt="Menu Applicazione"></p>
+          <p><img src="assets/img/Applicazioni.png" alt="Menu Applicazione"></p>
 
         </div>
       </div>
