--- a/index.html
+++ b/index.html
@@ -14,19 +14,8 @@
 
   <link rel="import" href="sections/about.html">
   <link rel="import" href="sections/windows/windows.html">
+  <link rel="import" href="sections/windows/app.html">
   <link rel="import" href="sections/windows/crash-hang.html">
-  <link rel="import" href="sections/menus/menus.html">
-  <link rel="import" href="sections/menus/shortcuts.html">
-  <link rel="import" href="sections/native-ui/ex-links-file-manager.html">
-  <link rel="import" href="sections/native-ui/notifications.html">
-  <link rel="import" href="sections/native-ui/dialogs.html">
-  <link rel="import" href="sections/native-ui/tray.html">
-  <link rel="import" href="sections/communication/ipc.html">
-  <link rel="import" href="sections/system/app-sys-information.html">
-  <link rel="import" href="sections/system/clipboard.html">
-  <link rel="import" href="sections/system/protocol-handler.html">
-  <link rel="import" href="sections/media/pdf.html">
-  <link rel="import" href="sections/media/desktop-capturer.html">
 </head>
 <body>
 
@@ -39,12 +28,12 @@
     <div class="nav-item u-category-windows">
       <button type="button" id="button-windows" data-section="windows" class="nav-button"><svg class="nav-icon"><use xlink:href="assets/img/icons.svg#icon-windows"></use></svg> Primi <em>passi</em></button>
       <button type="button" id="button-crash-hang" data-section="crash-hang" class="nav-button"><svg class="nav-icon"><use xlink:href="assets/img/icons.svg#icon-windows"></use></svg> Usare il <em>sistema</em></button>
-      <button type="button" id="button-crash-hang" data-section="crash-hang" class="nav-button"><svg class="nav-icon"><use xlink:href="assets/img/icons.svg#icon-windows"></use></svg> App <em>Rigenera</em></button>
+      <button type="button" id="button-app" data-section="app" class="nav-button"><svg class="nav-icon"><use xlink:href="assets/img/icons.svg#icon-windows"></use></svg> App <em>Rigenera</em></button>
     </div>
 
     <footer class="nav-footer">
       <button type="button" id="button-about" data-modal="about" class="nav-footer-button">
-        <svg class="nav-icon"><use xlink:href="assets/img/icons.svg#icon-windows"></use></svg>Torna alla Home</button>
+        <svg class="nav-icon"><use xlink:href="assets/img/icons.svg#icon-windows"></use></svg>Vai alla Home</button>
     </footer>
   </nav>
 
